<?xml version="1.0"?>
<package>
  <name>gandalf_detector</name>
  <version>0.0.0</version>
  <description>Object detector based on generic distance-invariant features (GDIF). 
               For more information see publication:
                Weinrich, C.; Wengefeld, T.; Schröter, C. &amp; Gross, H.-M. 
                People Detection and Distinction of their Walking Aids in 2D 
                Laser Range Data based on Generic Distance-Invariant Features 
                In Proc. of IEEE International Symposium on Robots and Human 
                Interactive Communications (RO-MAN), 2014
  </description>

  <maintainer email="christoph.weinrich@tu-ilmenau.de">Christoph Weinrich</maintainer>
  <maintainer email="tim.wengefeld@tu-ilmenau.de">Tim Wengefeld</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://http://www.tu-ilmenau.de/neurob/data-sets/people-detection-in-2d-laser-range-data/</url>


  <author email="christoph.weinrich@tu-ilmenau.de">Christoph Weinrich</author>
  <author email="tim.wengefeld@tu-ilmenau.de">Tim Wengefeld</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- <metapackage/> -->
  </export>
</package>
